--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yaml-update-action",
-  "version": "0.13.0",
+  "version": "0.13.2",
   "private": true,
   "description": "Update YAML property with dynamic values",
   "main": "lib/main.js",
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run package && npm test"
   },
   "repository": {
     "type": "git",
