sync fork from origin fjogeleit/yaml-update-action (#9)
* support quotingType config

Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>

* update dist

Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>

* dependency updates

Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>

* feat: allow force pushes (#555)

* feat: allow force option
* chore: add input to actions.yaml
* docs: add parameter
* fix: use getBooleanInput

* Handle PR exists as info instead failing

Signed-off-by: Frank Jogeleit <frank.jogeleit@lovoo.com>

* Upgrade to Node20

Signed-off-by: Frank Jogeleit <frank.jogeleit@lovoo.com>

* Update Tooling (#560)

* Update tooling

Signed-off-by: Frank Jogeleit <frank.jogeleit@lovoo.com>

* feat: allow multifile yaml (#570)

* feat: allow multifile yaml
* test: don't require leading $
* chore: run prettier
* fix: package
* fix: output multifile if input was multifile
* fix: run `npm run package`
* chore: run prettier
* chore: run npm package
* doc: add example in README.md
* fix: apply linter suggestion

* Update README.md (#580)

* fix CI pipeline errors

---------

Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>
Signed-off-by: Frank Jogeleit <frank.jogeleit@lovoo.com>
Co-authored-by: Frank Jogeleit <frank.jogeleit@web.de>
Co-authored-by: Lawrence Aiello <lawrence.aiello@laiello.com>
Co-authored-by: Frank Jogeleit <frank.jogeleit@lovoo.com>
Co-authored-by: holzgeist <holzgeist@users.noreply.github.com>
Co-authored-by: Fabio Kapsahili <68349146+fkapsahili@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
     required: false
     description: 'Removes quotes from reserved words, like Y, N, yes, no, on, etc.'
     default: 'false'
+  quotingType:
+    required: false
+    description: QuotingType for YAML conversion, possible values are ' and ". Defaults to single quotes
+    default: "'"
   format:
     required: false
     description: 'Supported file formats, possible values are YAML and JSON, will be guessed by file extension if not provided. Falls back to YAML'
@@ -28,6 +32,10 @@ inputs:
     required: false
     description: 'Branch to commit the change, will be created if not exist'
     default: 'master'
+  force:
+    required: false
+    description: 'Branch to commit the change, will be created if not exist'
+    default: 'false'
   masterBranchName:
     required: false
     description: 'Branch name of your master'
@@ -101,5 +109,5 @@ inputs:
     required: false
     default: ''
 runs:
-  using: 'node16'
+  using: 'node20'
   main: 'dist/index.js'
